final wormholes update

--- a/hyperwormholes/stop.html
+++ b/hyperwormholes/stop.html
@@ -3,34 +3,21 @@
   <head>
     <meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Boilerplate Starter kit v1.08</title>
+    <title> 🛑 </title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
   	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
   	<script src="assets/js/main.js"></script>
   </head>
-  <body class="drunkpage">
+  <body class="stoppage">
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
-    <div class="alert">
-      TAKE THE NEXT TURN FOR BAKED BEANS!
-
-      <div class="choices">
-
-        <div class="yes">
-          TAKE IT
-        </div>
-    
-        <div class="no">
-          BEA NS
-        </div>
-  
-      </div>
-
+    <div class="stop">
+      <img src="https://media3.giphy.com/media/YREMfuwcfiMq2G0Rpw/giphy-downsized-large.gif" alt="">
     </div>
 
-    
+
 
 
 
