--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>🍄 space by sophie</title>
+    <title>home</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
   	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
@@ -13,44 +13,7 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
-   
-     <div class="name">
-       Space by Sophie
-     </div>
 
-     <div class="subtitle">
-       howdy doody howdy doody 
-     </div>
-
-     <div class="subtitle2">
-       meow meow 
-     </div>
-
-     <div>
-      13 years of
-      <a href="https://www.pbt.org/learn-and-engage/resources-audience-members/ballet-101/brief-history-ballet/">
-     🩰
-     </a>
-    </div>
-
-     <div class="image">
-       <img src="assets/images/000092140034.jpg.jpg" alt="" width="500px">
-       🥺
-     </div>
-
-     <div>
-      j'habitais en france
-      <a href="https://www.youtube.com/watch?v=5lxWrjArhWE&ab_channel=EmileCaillou">
-      🏰...
-     </a>
-      <a href="https://en.wikipedia.org/wiki/Rabastens">
-      🥐...
-     </a>
-    </div>
-
-     <div class="image2">
-       <img src="assets/images/brown-01.png" alt="" width="1000px">
-     </div>
 
 
 
