--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -36,6 +36,14 @@
 
     </div>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jQuery.Marquee/1.5.0/jquery.marquee.min.js"></script>
+
+    <div class="marquee_text">
+      EVERYTHING IS TRUE AND NOTHING IS TRUE
+    </div>
+
 
 
 
