--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
   	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/marquee.js"></script>
   	<script src="assets/js/main.js"></script>
   </head>
   <body>
@@ -36,13 +37,12 @@
 
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jQuery.Marquee/1.5.0/jquery.marquee.min.js"></script>
 
     <div class="marquee_text">
       EVERYTHING IS TRUE AND NOTHING IS TRUE
     </div>
+
+    
 
 
 
