--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -42,8 +42,10 @@
       </div>
       <div class="col2">
         <div class="header">
-          1.2   <div class="bar"></div>
-          <br> <br>
+          <div class="item1">1.2</div> 
+          <div class="item2">reporter speaking</div>
+          =
+          <div class="circle"></div> 
           <audio controls>
             <source src="assets/audio/723_Reveal_PC.mp3" type="audio/mpeg">
           </audio>
@@ -406,18 +408,148 @@
         <div class="right">
           This plan to storm the 2016 Republican Convention, it didn’t happen. And it was largely forgotten because Trump won the nomination fair and square. But, Stop the Steal didn’t stop there.
         </div>
-        <div class="bar"></div>
         <div class="right">
           Reveal’s Stan Alcorn has been tracing the history of these three little words, and he’s going to tell you what happened next. Here’s Stan.
         </div>
-        <div class="left">
+        <div class="bar"></div>
+        <div class="right">
           As soon as he won the nomination, Donald Trump started saying the 2016 election was going to be rigged, and stopthesteal.org explained exactly how. Hillary Clinton and the Democrats were going to reprogram Diebold voting machines and also flood the polls with quote, “illegals.” To stop them, Stop the Steal was calling for an army of volunteers to show up at key precincts on Election Day looking for fraud.
         </div>
-        <div class="left">
+        <div class="right">
           Whatever happened, Laura Starecheski was going to cover it for Reveal by shadowing the Stop the Steal point person in Philadelphia, a Democratic city in a swing state where Trump insisted there would be voter fraud.
         </div>
-        <div class="left">
+        <div class="right">
           As far as you could tell, what was Stop the Steal in Philadelphia in 2016, in reality?
+        </div>
+        <div class="left">
+          Yeah. There did seem to be grand plans, like when you would go to the website, Stop the Steal looked like they were organizing people. But then when I was with Jack that day, it was kind of just Jack.
+        </div>
+        <div class="right">
+          Jack is Jack Posobiec, a Game of Thrones blogger turned pro-Trump Twitter troll who was working with Roger Stone. On election morning, Laura caught up with him at the Philly GOP headquarters.
+        </div>
+        <div class="bar2"></div>
+        <div class="right">
+          How is your mood right now, would you say?
+        </div>
+        <div class="left">
+          Oh, I’m excited. Are you kidding me? I live for this. I live for the adrenaline rush of Election Day, exposing the flagrant abuses of our democracy. It’s like Christmas morning.
+        </div>
+        <div class="right">
+          He’s basically pacing around and waiting for word that something has happened, so he can rush to the scene. And then finally, something happens, and he’s like, “Okay, it’s on.” So we jump in the car.
+        </div>
+        <div class="left">
+          As you can tell, I’ve been kind of living here.
+        </div>
+        <div class="right">
+          Jack’s driving and this other guy jumps in the backseat.
+        </div>
+        <div class="left">
+          Okay. I’m going to call the lawyer. And then I’m going to call a bunch of media people.
+        </div>
+        <div class="right">
+          Can you identify yourself?
+        </div>
+        <div class="left">
+          Albert Eisenberg, Philly Republican Party.
+        </div>
+        <div class="right">
+          What’s your role?
+        </div>
+        <div class="left">
+          Communications lead. Do you have any napkins or anything? I don’t want to drip [crosstalk].
+        </div>
+        <div class="middle">
+          It’s sounds like he’s eating a sandwich.
+        </div>
+        <div class="right">
+          Yeah, Albert had a hoagie, and he’s cramming this hoagie in his mouth.
+        </div>
+        <div class="left">
+          Hey, Dennis. We are headed to you know. I think this is going to be the story of the day for us, so we’re really going to push this.
+        </div>
+        <div class="right">
+          And Albert is freaking out.
+        </div>
+        <div class="left">
+          You can prep her, just relax her. And keep the message sharp and tight.
+        </div>
+        <div class="right">
+          He’s so excited.
+        </div>
+        <div class="left">
+          That first thing, my name is [Brittany], I forget her last name, Foreman, and today I witnessed voter fraud, period. Awesome.
+        </div>
+        <div class="right">
+          And he starts making all of these calls…
+        </div>
+        <div class="left">
+          Hey, [Ev]. This is Albert Eisenberg. We spoke pretty recently.
+        </div>
+        <div class="right">
+          … trying to get other media to come to this polling place where we’re headed.
+        </div>
+        <div class="left">
+          Hey. We got a really hot issue of voter fraud up in Winfield, and we’re headed there now. I want to tell you [crosstalk].
+        </div>
+        <div class="middle">
+          Meanwhile, Jack is using his phone to talk to his followers on Twitter’s live stream video app, Periscope.
+        </div>
+        <div class="left">
+          So hey, this is Jack Posobiec. I’ve got another report of voter fraud. Al is working to get some of the more traditional media, but we’re covering it live because that’s how we roll around here.
+        </div>
+        <div class="right">
+          At the time it seemed clear that they were trying to discredit the election before the election happened, just finding ways to de-legitimize it. And I guess I was just like, “This is so weird. What are they going to say when we get there?” I was really curious to see how Jack would filter what was happening to his followers, and would it work?
+        </div>
+        <div class="left">
+          There is Brittany.
+        </div>
+        <div class="right">
+          So we pull up.
+        </div>
+        <div class="left">
+          [inaudible].
+        </div>
+        <div class="right">
+          And there is this woman, Brittany Foreman. Can you tell me what happened? I’m a reporter for Reveal Radio.
+        </div>
+        <div class="left">
+          Tell both us [inaudible].
+        </div>
+        <div class="left">
+          Yes. From the time I came in, it was a issue with the committee person. [crosstalk].
+        </div>
+        <div class="right">
+          And to be honest with you, it was a little confusing and hard to figure out what exactly the complaint was. At one point, it seemed like she was saying…
+        </div>
+        <div class="left">
+          Then I witness him actually go, and-
+        </div>
+        <div class="right">
+          There was someone with the Democratic Party who was going into voting booths with people.
+        </div>
+        <div class="left">
+          … and offered to assist the elderly inside the voting both.
+        </div>
+        <div class="right">
+          But then it was like, is that person just helping?
+        </div>
+        <div class="left">
+          I don’t know what he was doing. I don’t know what he did in there. He could have been hitting the buttons for all I know.
+        </div>
+        <div class="right">
+          Interestingly, Jack didn’t seem that curious about her or what the account was. And Jack goes off to the side just talking to his followers.
+        </div>
+        <div class="left">
+          He’s working together, complete collusion.
+        </div>
+        <div class="right">
+          And I was like, “Oh.”
+        </div>
+        <div class="left">
+          Allowing him to get away with murder, in terms of politics.
+        </div>
+        <div class="right">
+          It’s like, go there, be there in person, set it up so that something could have happened, and then you just say that it happened, and you were there. And so, it seems more legitimate to people.
         </div>
 
 
