--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -14,9 +14,21 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
-    <div class="nav">
+    <div class="nav1">
 
     </div>
+    
+    <div class="nav">
+      Menu
+    </div>
+
+    <div class="menu">
+      <div class="menu__list">
+        1.1 <br> 1.2 <br> 1.3 <br> 2.1 <br> 3.1
+      </div>
+    </div>
+
+
     
 
     <div class="main">
@@ -551,6 +563,94 @@
         <div class="right">
           It’s like, go there, be there in person, set it up so that something could have happened, and then you just say that it happened, and you were there. And so, it seems more legitimate to people.
         </div>
+        <div class="left">
+          That’s why I’m Periscoping this. That’s why we’ve got other media out here. We’ve got other media coming. And we’re going to expose this for what it is and let people know. So at some point, I would like to-
+        </div>
+        <div class="bar2"></div>
+        <div class="right">
+          Meanwhile, across town, the phones are ringing at the hotline set up to deal with allegations like this one. Every call gets a response from the Philadelphia district attorney’s Election Fraud Taskforce made up of several dozen investigators and more than 60 lawyers, including Andrew Wellbrock.
+        </div>
+        <div class="left">
+          It was all run of the mill complaints. “I went to vote and my name must have been purged from the register.” “Oh, when is the last time you voted?” “1994.” “Okay, that’s why,” nothing actually alleging a crime.
+        </div>
+        <div class="right">
+          It sounds like it’s a lot of-
+        </div>
+        <div class="left">
+          Babysitting. Yeah, I mean, we are often put in the position of basically being told, we’re like the referees.
+        </div>
+        <div class="right">
+          But as the day goes on, they start to hear stories that are more disturbing.
+        </div>
+        <div class="left">
+          Some of the younger prosecutors started saying things like, “Hey, we’re seeing this on Twitter. We’re seeing this on Twitter.”
+        </div>
+        <div class="right">
+          It’s like the players are taking their complaints to the fans instead of the refs. The Philly GOP tweets that a voting machine is defaulting to Clinton when voting for Trump. And they tweet out a video of Brittany Foreman, #VoterFraudIllegal. It opens with Albert’s line from the car.
+        </div>
+        <div class="left">
+          My name is Brittany Foreman. And today, I witnessed voter fraud.
+        </div>
+        <div class="left">
+          There are people screaming at the internet about all of these things that are happening in Philadelphia, but we weren’t getting phone calls. And at 2:00 PM, we did a big press conference. We have no founded complaints of intimidation, no founded complaints of voter fraud. And we basically said, “Philly GOP please call us, if you have these complaints and we can address them.” And at 2:00 PM they stopped tweeting. So we asked them to put up or shut up, and they decided to shut up rather than provide us with evidence.
+        </div>
+        <div class="right">
+          But the internet does not shut up. The Brittany Foreman video is re-tweeted by people like Jack Posobiec, and ultimately watched hundreds of thousands of times. It’s picked up by websites like Infowars and Breitbart with headlines like, “Philly Poll Watcher Says She Personally Witnessed Voter Fraud.” But still, all this is a one day story. Trump wins the election that night and most people move on, including Andrew.
+        </div>
+        <div class="left">
+          To me, it came and went, and that was that.
+        </div>
+        <div class="right">
+          Until four years later when Andrew would run the Philadelphia Election Task Force for the 2020 election.
+        </div>
+        <div class="left">
+          Here we are now, just hours from Election Day 2020.
+        </div>
+        <div class="left">
+          The Trump campaign calling for thousands to monitor what the president insists is an election rigged against him.
+        </div>
+        <div class="left">
+          Go into the polls and watch very carefully, because bad things happen in Philadelphia, bad things.
+        </div>
+        <div class="left">
+          When we got that hotline up is when we realized that things were going to be very different. We’re getting calls from guys in Texas, “They’re stealing the vote. They’re putting banners on the buildings.” We’re like, “Sir, that was taken down right when the polls opened at 7:00 AM.” “You’re lying to me.” “All right, what do you want me to do? It’s not there.”
+        </div>
+        <div class="right">
+          At some point, they start getting calls about a video going around on Twitter.
+        </div>
+        <div class="left">
+          You’re not letting me in.
+        </div>
+        <div class="left">
+          [crosstalk] No.
+        </div>
+        <div class="right">
+          It’s 30 seconds long and a middle aged white man demanding to be let into a funeral parlor where people are voting.
+        </div>
+        <div class="left">
+          [crosstalk] call somebody.
+        </div>
+        <div class="left">
+          I have a citywide watcher’s certificate.
+        </div>
+        <div class="left">
+          Well, it’s not for this location.
+        </div>
+        <div class="left">
+          No, it’s not [crosstalk].
+        </div>
+        <div class="right">
+          The tweet says, “A poll watcher in Philly was just wrongfully prevented from entering the polling place,” which is technically accurate. The poll watcher, Gary Feldman, should have been let in.
+        </div>
+        <div class="left">
+          Had Gary Feldman called us to say that, we would have said, “Yes, he is allowed to be there,” but that’s not what they wanted. They wanted a show. They wanted that headline that you referred to.
+        </div>
+        <div class="right">
+          So he didn’t make a complaint?
+        </div>
+        <div class="left">
+          No, I mean, that was the guy with deja vu of 2016. It was the same deal all over again.
+        </div>
 
 
 
@@ -563,6 +663,13 @@
 
 
 
+
+      </div>
+      <div class="col2_1">
+        <div class="header">
+          <span style="color:black" > 1.3 </span>
+        </div>
+        An infodemic is too much information including false or misleading information in digital and physical environments during a disease outbreak. It causes confusion and risk-taking behaviours that can harm health. It also leads to mistrust in health authorities and undermines the public health response. An infodemic can intensify or lengthen outbreaks when people are unsure about what they need to do to protect their health and the health of people around them. With growing digitization – an expansion of social media and internet use – information can spread more rapidly. This can help to more quickly fill information voids but can also amplify harmful messages. <br> <br> Infodemic management is the systematic use of risk- and evidence-based analysis and approaches to manage the infodemic and reduce its impact on health behaviours during health emergencies. <br> <br> Infodemic management aims to enable good health practices through 4 types of activities: <br> <br> Listening to community concerns and questions <br> <br> Promoting understanding of risk and health expert advice <br> <br> Building resilience to misinformation <br> <br> Engaging and empowering communities to take positive action
       </div>
       <div class="col3">
         Algorithmic decision-making is becoming more common every day. Increasingly, important decisions that affect people’s lives are governed by datasets that are too big for an individual to process. People have become accustomed to algorithms making all manner of recommendations, from products to buy, to songs to listen to, to social network connections. But, algorithms are not just recommending, they are also being used to make big decisions about people’s lives. Among many applications, algorithms are used to: • Sort résumés for job applications; • Allocate social services; • Decide who sees advertisements for open positions, housing, and products; • Decide who should be promoted or fired; • Estimate a person’s risk of committing crimes or the length of a prison term; • Assess and allocate insurance and benefits; • Obtain and determine credit; and • Rank and curate news and information in search engines. While algorithmic decision making can offer benefits in terms of speed, efficiency, and even fairness, there is a common misconception that algorithms automatically result in unbiased decisions. While it may appear like algorithms are unbiased calculations because they take in objective points of reference and provide a standard outcome, there remain many problems with those inputs and the outputs. As Frank Pasquale, law professor at the University of Maryland, points out, algorithmic decision-making is “black boxed,” which means that while we may know what goes into the computer for processing and what the outcome is, there are currently no external auditing systems or regulations for assessing what happens to the data during processing.2 Algorithms are attractive because they promise neutrality in decision making—they take in data and deliver results. But algorithms are not “neutral.” In the words of mathematician Cathy O’Neil, an algorithm is an “opinion embedded in mathematics.”3 And like opinions, all algorithms are different. Some algorithms privilege a certain group of people over another. O’Neil argues that across a range of occupations, human decision makers are being encouraged to defer to software systems even when there is evidence that a system is making incorrect, unjust, or harmful decisions. When an algorithm’s output results in unfairness, we refer to it as bias. Bias can find its way into an algorithm in many ways. It can be created through the social context where an algorithm is created, as a result of technical constraints, or by the way the algorithm is used in practice.4 When an algorithm is being created, it is structured by the values of its designer, which might not be neutral. And after an algorithm is created, it must be trained—fed large amounts of data on past decisions—to teach it how to make future decisions. If that training data is itself biased, the algorithm can inherit that bias. For these reasons and others, decisions made by computer are not fundamentally more logical and unbiased than decisions made by people. Black-boxed algorithms can unfairly limit opportunities, restrict services, and even produce “technological redlining.” As Safiya Noble, professor of communication at University of Southern California, writes, technological redlining occurs when algorithms produce inequitable outcomes and replicate known inequalities, leading to the systematic exclusion of Blacks, Latinos, and Native Americans.5 Technological redlining occurs because we have no control over how data is used to profile us. If bias exists in the data, it is replicated in the outcome. Without enforceable mechanisms of transparency, auditing, and accountability, little can be known about how algorithmic decision-making limits or impedes civil rights. Noble writes, “technological redlining is a form of digital data discrimination, which uses our digital identities and activities to bolster inequality and oppression. It is often enacted without our knowledge, through our digital engagements, which become part of algorithmic, automated, and artificially intelligent sorting mechanisms that can either target or exclude us. It is a fundamental dimension of generating, sustaining, or deepening racial, ethnic, and gender discrimination, and it is centrally tied to the distribution of goods and services in society, like education, housing, and other human and civil rights. Technological redlining is closely tied to longstanding practices of ‘redlining,’ which have been consistently defined as illegal by the United States Congress, but which are increasingly elusive because of their digital deployments through online, internet-based software and platforms, including exclusion from, and control over, individual participation and representation in digital systems.”6 Important examples of technological redlining were uncovered by ProPublica, who showed how Facebook’s targeted advertising system allowed for discrimination by race and age.7 These decisions embedded in design have significant ramifications for those who are already marginalised. In this memo, we begin by showcasing one example to illustrate how racial bias manifests in an algorithmic system. We then address the trade-offs between and debates about algorithms and accountability across several key ethical dimensions: fairness and bias; opacity and transparency; the repurposing of data and algorithms; lack of standards for auditing; power and control; as well as trust and expertise. From there, we provide an overview of algorithmic accountability by highlighting how news coverage and self-governance have further exacerbated problems related to unfair, unethical, and possibly illegal applications of algorithmic systems. 
