--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -14,10 +14,7 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
-    <div class="nav1">
 
-    </div>
-    
     <div class="nav">
       Menu
     </div>
@@ -974,7 +971,15 @@
         </div>
         An infodemic is too much information including false or misleading information in digital and physical environments during a disease outbreak. It causes confusion and risk-taking behaviours that can harm health. It also leads to mistrust in health authorities and undermines the public health response. An infodemic can intensify or lengthen outbreaks when people are unsure about what they need to do to protect their health and the health of people around them. With growing digitization – an expansion of social media and internet use – information can spread more rapidly. This can help to more quickly fill information voids but can also amplify harmful messages. <br> <br> Infodemic management is the systematic use of risk- and evidence-based analysis and approaches to manage the infodemic and reduce its impact on health behaviours during health emergencies. <br> <br> Infodemic management aims to enable good health practices through 4 types of activities: <br> <br> Listening to community concerns and questions <br> <br> Promoting understanding of risk and health expert advice <br> <br> Building resilience to misinformation <br> <br> Engaging and empowering communities to take positive action
       </div>
+      <div class="title1">
+        <div class="tit">
+          Cyborg Reflections
+        </div>
+      </div>
       <div class="col3_1">
+        <div class="header">
+          3.1
+        </div>
         Take the incipient Internet of things — the invasion of cheap sensors, chips, and wirelessly chattering mobile media into the objects in our everyday world. The nineties vision of “cyberspace" that partly inspired TechGnosis suggested that a surreal digital otherworld lay on the far side of the looking glass screen from the meatspace we physically inhabit. But that topology is being decisively eroded by the distribution of algorithms, sensing, and communicating capabilities through addressable objects, material things that in some cases are growing extraordinarily autonomous. There are sound reasons for these developments, which arguably will greatly increase the e"ciency and power of individuals and organizations to monitor, regulate, and respond to a world spinning out of control. As such, the Internet of things o$ers consumers another Gernsback carrot, another vision of a future world where desire is instantly and transparently satis#ed, where labor is o%oaded onto servitors, and where we are all safely watched over by machines of love and grace. But if the social history of technology provides any insight at all — and I would not have written TechGnosis if it didn’t — this fantasy is necessarily coupled to its own shadow side. As in the tale of the sorcerer’s apprentice, algorithmic agents will be understood as possessing a mind of their own, or serve as proxies for invisible agents of crime or all-watching control. Phil Dick’s prophecy, cited earlier in TechGnosis, is here: our engineered world is “beginning to possess what the primitive sees in his environment: animation.” In other words, a kind of anxious animism, the mindframe once (wrongly) associated with the primitive origins of religion, is returning in a digitally remastered form. Intelligent objects, drones, robots, and deeply interactive devices are multiplying the nonhuman agents with whom we will be forced to negotiate, anticipate, and dodge in order to live our lives. Sometimes remote humans will be at the helm of these artifacts, though we may not always know whether or not people are directly in the loop. But all of it — the now wireless world itself — will become data for the taking. So if Snowden’s NSA revelations felt like the cold shadows of some high-!ying nazgûl falling across your backyard garden, get ready to be swallowed up in the depths of the uncanny valley
       </div>
       <div class="title1">
