--- a/1.first attempt/index.html
+++ b/1.first attempt/index.html
@@ -22,6 +22,25 @@
        howdy doody howdy doody 
      </div>
 
+     <div class="emoji1">
+
+      <div class="emoji">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/microsoft/309/pinched-fingers_medium-skin-tone_1f90c-1f3fd_1f3fd.png" width="200px"alt="">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/144/microsoft/309/banana_1f34c.png" width="200px" alt="">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/144/microsoft/309/cherries_1f352.png" width="200px" alt="">
+      </div>
+      <div class="emoji">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/144/microsoft/309/hot-pepper_1f336-fe0f.png" width="200px" alt="">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/144/microsoft/309/seal_1f9ad.png" width="200px" alt="">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/144/microsoft/309/growing-heart_1f497.png" width="200px" alt="">
+      </div>
+      <div class="emoji">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/144/microsoft/309/dizzy_1f4ab.png" width="200px" alt="">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/144/microsoft/309/water-wave_1f30a.png" width="200px" alt="">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/144/microsoft/309/ringed-planet_1fa90.png" width="200px" alt="">
+      </div>
+    </div>
+
      <div class="subtitle2">
        meow meow 
      </div>
