--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -977,7 +977,19 @@
         <div class="header">
           2.1
         </div>
-        An infodemic is too much information including false or misleading information in digital and physical environments during a disease outbreak. It causes confusion and risk-taking behaviours that can harm health. It also leads to mistrust in health authorities and undermines the public health response. An infodemic can intensify or lengthen outbreaks when people are unsure about what they need to do to protect their health and the health of people around them. With growing digitization – an expansion of social media and internet use – information can spread more rapidly. This can help to more quickly fill information voids but can also amplify harmful messages. <br> <br> Infodemic management is the systematic use of risk- and evidence-based analysis and approaches to manage the infodemic and reduce its impact on health behaviours during health emergencies. <br> <br> Infodemic management aims to enable good health practices through 4 types of activities: <br> <br> Listening to community concerns and questions <br> <br> Promoting understanding of risk and health expert advice <br> <br> Building resilience to misinformation <br> <br> Engaging and empowering communities to take positive action
+        An infodemic is too much information including false or misleading information in digital and physical environments during a disease outbreak. It causes confusion and risk-taking behaviours that can harm health. It also leads to mistrust in health authorities and undermines the public health response. An infodemic can intensify or lengthen outbreaks when people are unsure about what they need to do to protect their health and the health of people around them. With growing digitization – an expansion of social media and internet use – information can spread more rapidly. This can help to more quickly fill information voids but can also amplify harmful messages. <br> <br> Infodemic management is the systematic use of risk- and evidence-based analysis and approaches to manage the infodemic and reduce its impact on health behaviours during health emergencies. <br> <br> Infodemic management aims to enable good health practices through 4 types of activities: <br> <br> 
+        <div class="col2text">
+          Listening to community concerns and questions
+        </div>
+        <div class="col2text">
+          Promoting understanding of risk and health expert advice
+        </div>
+        <div class="col2text">
+          Building resilience to misinformation
+        </div> 
+        <div class="col2text">
+          Engaging and empowering communities to take positive action
+        </div>
       </div>
       <div class="title_col">
         <div class="title">
@@ -988,7 +1000,74 @@
         <div class="header">
           3.1
         </div>
-        Take the incipient Internet of things — the invasion of cheap sensors, chips, and wirelessly chattering mobile media into the objects in our everyday world. The nineties vision of “cyberspace" that partly inspired TechGnosis suggested that a surreal digital otherworld lay on the far side of the looking glass screen from the meatspace we physically inhabit. But that topology is being decisively eroded by the distribution of algorithms, sensing, and communicating capabilities through addressable objects, material things that in some cases are growing extraordinarily autonomous. There are sound reasons for these developments, which arguably will greatly increase the e"ciency and power of individuals and organizations to monitor, regulate, and respond to a world spinning out of control. As such, the Internet of things o$ers consumers another Gernsback carrot, another vision of a future world where desire is instantly and transparently satis#ed, where labor is o%oaded onto servitors, and where we are all safely watched over by machines of love and grace. But if the social history of technology provides any insight at all — and I would not have written TechGnosis if it didn’t — this fantasy is necessarily coupled to its own shadow side. As in the tale of the sorcerer’s apprentice, algorithmic agents will be understood as possessing a mind of their own, or serve as proxies for invisible agents of crime or all-watching control. Phil Dick’s prophecy, cited earlier in TechGnosis, is here: our engineered world is “beginning to possess what the primitive sees in his environment: animation.” In other words, a kind of anxious animism, the mindframe once (wrongly) associated with the primitive origins of religion, is returning in a digitally remastered form. Intelligent objects, drones, robots, and deeply interactive devices are multiplying the nonhuman agents with whom we will be forced to negotiate, anticipate, and dodge in order to live our lives. Sometimes remote humans will be at the helm of these artifacts, though we may not always know whether or not people are directly in the loop. But all of it — the now wireless world itself — will become data for the taking. So if Snowden’s NSA revelations felt like the cold shadows of some high-!ying nazgûl falling across your backyard garden, get ready to be swallowed up in the depths of the uncanny valley
+
+        <div class="col3text">
+
+        Take the incipient Internet of things — the invasion of cheap sensors, chips, and wirelessly chattering mobile media into the objects in our everyday world. The nineties vision of “cyberspace" that partly inspired TechGnosis suggested that a surreal digital otherworld lay on the far side of the looking glass screen from the meatspace we physically inhabit. <br> <br>  <br> <br> But that topology is being decisively eroded by the distribution of algorithms, sensing, and communicating capabilities through addressable objects, material things that in some cases are growing extraordinarily autonomous. <br> <br> <br> <br> There are sound reasons for these developments, which arguably will greatly increase the e"ciency and power of individuals and organizations to monitor, regulate, and respond to a world spinning out of control. As such, the Internet of things offers consumers another Gernsback carrot, another vision of a future world where desire is instantly and transparently satisfied, where labor is offloaded onto servitors, and where we are all safely watched over by machines of love and grace. But if the social history of technology provides any insight at all — and I would not have written TechGnosis if it didn’t — this fantasy is necessarily coupled to its own shadow side. As in the tale of the sorcerer’s apprentice, algorithmic agents will be understood as possessing a mind of their own, or serve as proxies for invisible agents of crime or all-watching control. Phil Dick’s prophecy, cited earlier in TechGnosis, is here: our engineered world is “beginning to possess what the primitive sees in his environment: animation.” In other words, a kind of anxious animism, the mindframe once (wrongly) associated with the primitive origins of religion, is returning in a digitally remastered form. Intelligent objects, drones, robots, and deeply interactive devices are multiplying the nonhuman agents with whom we will be forced to negotiate, anticipate, and dodge in order to live our lives. Sometimes remote humans will be at the helm of these artifacts, though we may not always know whether or not people are directly in the loop. But all of it — the now wireless world itself — will become data for the taking. So if Snowden’s NSA revelations felt like the cold shadows of some high-!ying nazgûl falling across your backyard garden, get ready to be swallowed up in the depths of the uncanny valley
+        </div>
+
+      </div>
+      <div class="col3_2">
+        <div class="header">
+          3.2
+        </div>
+        One side of this new animism we already know by another name: paranoia, which will continue to remain an attractive (and arguably rational) existential option in our networked and increasingly manipulated world. Even if you set aside the all-tooreal problems of political and corporate conspiracy, the root conditions of our hypermediated existence breed “conspiracy theory.” We live in an incredibly complicated world of reverberating feedback loops, one that is increasingly massaged by invisible algorithmic controls, behavioral economics, massive corporate and government surveillance, superwealthy agendas, and insights from half a century
+        of mind-control ops. It is impossible to know all the
+        details and agendas of these invisible agents, so if
+        we try to map their operations beyond the managed
+        surface of common sense and “business-as-usual,”
+        then we almost inevitably need to tap the imagination, with its shifty associative logic, as we build our
+        maps and models out of such fragmentary knowledge. That’s why the intertwingled complexities
+        — aided and abetted by the myopic and self-reinforcing conditions of the Internet — found even in
+        the most concrete conspiracy investigations inevitably drift, as systems of discourse, towards more
+        arcane possibilities. The networks of in!uence and
+        control we construct are fabulated along a spectrum
+        of possibility whose more extreme and dreamlike
+        ends are effectively indistinguishable from the religious or occult imagination. JFK = UFO. Analyses of
+        the “twilight language” hidden in the latest school
+        shooting, or Illuminati hand signs in hip-hop videos,
+        or the evidence for false !ag operations buried in the
+        nitty-gritty data glitches of major news events — all
+        these disturbing and popular practices suggest an
+        allegorical art of interpretation that is impossible to
+        extricate from our new baroque reality, with all its
+        reverberating folds of surface and depth. Paranoia’s
+        networks of hidden cause not only resonate with the
+        electronic networks that increasingly complicate
+        and characterize our world, but suggest the ultimate Discordian twist in the plot: that the greatest
+        forms of control are the stories we tell ourselves
+        about control.
+        <br> <br>
+        We like to nerd out on culture that we
+        increasingly experience as data to play with. The
+        in-jokes, scuttlebutt, mash-ups, and lore-obsession of geekery allow us, therefore, to snuggle up
+        to the uncanny possibilities of magic, superpowers,
+        and cosmic evil without ever losing the cover story
+        that makes these pleasures possible for modern
+        folks: that our entertainments are “just #ctions,” diversions with no ontological or real psychological
+        upshot, just moves in a game.
+        The funny thing about games and #ctions is
+        that they have a weird way of bleeding into reality. Whatever else it is, the world that humans
+        experience is animated with narratives, rituals,
+        and roles that organize psychological experience,
+        social relations, and our imaginative grasp of the
+        material cosmos. The world, then, is in many ways
+        a webwork of fctions, or, better yet, of stories. The
+        contemporary urge to “gamify” our social and technological interactions is, in this sense, simply an
+        extension of the existing games of subculture, of
+        folklore, even of belief. This is the secret truth of the
+        history of religions: not that religions are “nothing
+        more” than #ctions, crafted out of sociobiological
+        need or wielded by evil priests to control ignorant
+        populations, but that human reality possesses an
+        inherently #ctional or fantastic dimension whose
+        “game engine” can — and will — be organized along
+        variously visionary, banal, and sinister lines. Part
+        of our obsession with counterfactual genres like
+        sci-fi or fantasy is not that they offer escape from
+        reality — most of these genres are glum or dystopian a lot of the time anyway — but because, in
+        re!ecting the “as if” character of the world, they
+        are actually realer than they appear
       </div>
       <div class="title_col">
         <div class="title">
@@ -998,6 +1077,12 @@
       <div class="col6">
         <div class="header">
           6.1
+        </div>
+        An echo chamber is an environment where a person only encounters information or opinions that reflect and reinforce their own. Echo chambers can create misinformation and distort a person’s perspective so they have difficulty considering opposing viewpoints and discussing complicated topics. They’re fueled in part by confirmation bias, which is the tendency to favor info that reinforces existing beliefs.
+      </div>
+      <div class="col6_2">
+        <div class="header">
+          6.2
         </div>
         Pick any of the big topics of the day – Brexit, climate change or Trump’s immigration policies – and wander online. What one is likely to find is radical polarization – different groups of people living in different worlds, populated with utterly different facts. <br> <br>
         Many people want to blame the “social media bubble” - a belief that everybody sorts themselves into like-minded communities and hears only like-minded views. From my perspective as a philosopher who thinks about communities and trust, this fails to get at the heart of the issue. <br> <br>
@@ -1009,10 +1094,10 @@
         <br> <br>
         My research focuses on “epistemic bubbles” and “echo chambers.” These are two distinct ideas, that people often blur together.
         <br> <br>
-        <div class="left">
+        <div class="leftbub">
           An epistemic bubble is what happens when insiders aren’t exposed to people from the opposite side. 
         </div>
-        <div class="right">
+        <div class="rightbub">
           An echo chamber is what happens when insiders come to distrust everybody on the outside.
         </div> 
         <br> <br>
@@ -1052,9 +1137,9 @@
       <div class="image3">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Sna_large.png/440px-Sna_large.png" width="300px"alt="">
       </div>
-      <div class="col6_2">
+      <div class="col6_3">
         <div class="header">
-
+          6.3
         </div>
       </div>
     </div>
