--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -1011,8 +1011,8 @@
         <div class="header">
           3.2
         </div>
-        One side of this new animism we already know by another name: paranoia, which will continue to remain an attractive (and arguably rational) existential option in our networked and increasingly manipulated world. Even if you set aside the all-tooreal problems of political and corporate conspiracy, the root conditions of our hypermediated existence breed “conspiracy theory.” We live in an incredibly complicated world of reverberating feedback loops, one that is increasingly massaged by invisible algorithmic controls, behavioral economics, massive corporate and government surveillance, superwealthy agendas, and insights from half a century
-        of mind-control ops. It is impossible to know all the
+        One side of this new animism we already know by another name: paranoia, which will continue to remain an attractive (and arguably rational) existential option in our networked and increasingly manipulated world. Even if you set aside the all-tooreal problems of political and corporate conspiracy, the root conditions of our hypermediated existence breed “conspiracy theory.” <br> <br> We live in an incredibly <span style="writing-mode: vertical-rl;"> complicated </span> <span style="writing-mode: vertical-lr;"> world </span> of reverberating feedback loops, one that is increasingly massaged by invisible algorithmic controls, behavioral economics, massive corporate and government surveillance, superwealthy agendas, and insights from half a century
+        of mind-control ops. <br> <br> It is impossible to know all the
         details and agendas of these invisible agents, so if
         we try to map their operations beyond the managed
         surface of common sense and “business-as-usual,”
@@ -1020,10 +1020,10 @@
         maps and models out of such fragmentary knowledge. That’s why the intertwingled complexities
         — aided and abetted by the myopic and self-reinforcing conditions of the Internet — found even in
         the most concrete conspiracy investigations inevitably drift, as systems of discourse, towards more
-        arcane possibilities. The networks of in!uence and
+        arcane possibilities. The networks of influence and
         control we construct are fabulated along a spectrum
         of possibility whose more extreme and dreamlike
-        ends are effectively indistinguishable from the religious or occult imagination. JFK = UFO. Analyses of
+        ends are effectively indistinguishable from the religious or occult imagination. JFK = UFO. <br> <br> Analyses of
         the “twilight language” hidden in the latest school
         shooting, or Illuminati hand signs in hip-hop videos,
         or the evidence for false !ag operations buried in the
@@ -1044,7 +1044,7 @@
         to the uncanny possibilities of magic, superpowers,
         and cosmic evil without ever losing the cover story
         that makes these pleasures possible for modern
-        folks: that our entertainments are “just #ctions,” diversions with no ontological or real psychological
+        folks: that our entertainments are “just fictions,” diversions with no ontological or real psychological
         upshot, just moves in a game.
         The funny thing about games and #ctions is
         that they have a weird way of bleeding into reality. Whatever else it is, the world that humans
