--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -1008,7 +1008,7 @@
 
       </div>
       <div class="col3_2">
-        <div class="header">
+        <div class="headerblack">
           3.2
         </div>
         One side of this new animism we already know by another name: paranoia, which will continue to remain an attractive (and arguably rational) existential option in our networked and increasingly manipulated world. Even if you set aside the all-tooreal problems of political and corporate conspiracy, the root conditions of our hypermediated existence breed “conspiracy theory.” <br> <br> We live in an incredibly <span style="writing-mode: vertical-rl;"> complicated </span> <span style="writing-mode: vertical-lr;"> world </span> of reverberating feedback loops, one that is increasingly massaged by invisible algorithmic controls, behavioral economics, massive corporate and government surveillance, superwealthy agendas, and insights from half a century
