--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -1079,9 +1079,7 @@
           6.2
         </div>
         Pick any of the big topics of the day – Brexit, climate change or Trump’s immigration policies – and wander online. What one is likely to find is radical polarization – different groups of people living in different worlds, populated with utterly different facts. <br> <br>
-        Many people want to blame the “social media bubble” - a belief that everybody sorts themselves into like-minded communities and hears only like-minded views. From my perspective as a philosopher who thinks about communities and trust, this fails to get at the heart of the issue. <br> <br>
-
-        <span style='font-size: 35px'> In my mind, the crucial issue right now isn’t what people hear, but whom people believe. </span>
+        Many people want to blame the “social media bubble” - a belief that everybody sorts themselves into like-minded communities and hears only like-minded views. From my perspective as a philosopher who thinks about communities and trust, this fails to get at the heart of the issue. <br> <br> In my mind, the crucial issue right now isn’t what people hear, but whom people believe.
 
       
         
