--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -20,12 +20,12 @@
       </div>
     </div>
   
-
+    <!--
      <div class="menu">
       <div class="container1">
         Online, there is such a large amount of information from <span style="font-style: italic; font-weight: bold; "> different </span> sources that it can be hard to know who or what to believe. It may not be clear where the information has come from, who wrote it, or when it was produced. <br> <br> When we share something online, we do not always stop to think whether it is true. Misinformation can be new, surprising, or emotive. This can make us more likely to share it and it can often spread faster than the facts.
       </div>
-    </div>
+    </div> -->
 
 
     
@@ -1230,13 +1230,13 @@
       </div>
 
       </div>
-      <div class="col4_2">
-        An echo chamber is an environment where a person only encounters information or opinions that reflect and reinforce their own. Echo chambers can create misinformation and distort a person’s perspective so they have difficulty considering opposing viewpoints and discussing complicated topics. They’re fueled in part by confirmation bias, which is the tendency to favor info that reinforces existing beliefs.
-      </div>
       <div class="title_col">
         <div class="title">
           <a  href="https://www.youtube.com/watch?v=iT45s4roNME"> What Is Real? </a>
         </div>
+      </div>
+      <div class="col4_2">
+        An echo chamber is an environment where a person only encounters information or opinions that reflect and reinforce their own. Echo chambers can create misinformation and distort a person’s perspective so they have difficulty considering opposing viewpoints and discussing complicated topics. They’re fueled in part by confirmation bias, which is the tendency to favor info that reinforces existing beliefs.
       </div>
       <div class="image3">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Sna_large.png/440px-Sna_large.png" width="300px"alt="">
