--- a/6.chrome/home.html
+++ b/6.chrome/home.html
@@ -20,12 +20,12 @@
       </div>
     </div>
   
-    <!--
+    
      <div class="menu">
       <div class="container1">
         Online, there is such a large amount of information from <span style="font-style: italic; font-weight: bold; "> different </span> sources that it can be hard to know who or what to believe. It may not be clear where the information has come from, who wrote it, or when it was produced. <br> <br> When we share something online, we do not always stop to think whether it is true. Misinformation can be new, surprising, or emotive. This can make us more likely to share it and it can often spread faster than the facts.
       </div>
-    </div> -->
+    </div> 
 
 
     
